--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,36 +1,45 @@
 .container{
+  width:500px;
   display: flex;
   flex-direction: column;
+  margin:auto;
   align-items: center;
 }
 
 .container h2{
+  text-align: center;
   margin-bottom: 10px;
 }
 
-.input{
+.container__input{
   margin-bottom: 10px;
 }
 
-.input input{
+.container__input input{
   background-color: white;
   border-width: 0px;
-  padding: 5px;
-  padding-left: 10px;
+  padding: 10px;
+  padding-left: 15px;
   border-radius: 20px 0px 0px 20px;
+  font-size: 15px;
   color:black
 }
 
-.input input:focus{
+.container__input input:focus{
   outline:none;
 }
 
-.input button{
+.container__input button{
   box-sizing: border-box;
   background-color: green;
-  padding: 5px;
+  padding: 10px;
+  font-size: 15px;
   padding-right: 10px;
   border-radius: 0px 20px 20px 0px;
+}
+
+ul{
+  width: 100%;
 }
 
 li{
