--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -47,6 +47,25 @@ li{
   margin-bottom: 5px;
 }
 
+.container__excluir{
+  margin: auto;
+  margin-top: 5px;
+}
+
+.container__excluir button{
+  font-size: 12px;
+  padding: 10px 15px;
+  border-width: 0;
+  border-radius: 20px;
+  background-color: white;
+  color:black;
+}
+
+.container__excluir button:hover{
+  background-color: red;
+  color:white;
+}
+
 @media screen and (max-width:700px){
   ul{
     width: 80%;
