--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,15 +4,16 @@
   flex-direction: column;
   margin:auto;
   align-items: center;
+  padding-top: 10px;
 }
 
 .container h2{
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .container__input{
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .container__input input{
@@ -67,6 +68,10 @@ li{
 }
 
 @media screen and (max-width:700px){
+  .container{
+    width:100%;
+    margin: 0;
+  }
   ul{
     width: 80%;
   }
